--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1121,73 +1121,85 @@
         <tab heading="Legal" style="width:100%" *ngIf="caseLegalForm">
             <form [formGroup]="caseLegalForm" *ngIf="isLegalDataLoaded">
                 <div class="row">
+
                     <div class="col-md-4 d-flex flex-column">
+                        <div class="card">
+                            <div class="card-header">
+                                Legal Data
+                            </div>
+                            <div class="card-block">
+                                <div class="form-group">
+                                    <label for="PeaceMakerId">Case Number as per court</label>
+                                    <input [formControl]="caseLegalForm.controls['CaseNumber']" class="form-control" />
+                                </div>
 
-                        <div class="form-group">
-                            <label for="PeaceMakerId">Case Number as per court</label>
-                            <input [formControl]="caseLegalForm.controls['CaseNumber']" class="form-control" />
+                                <div class="form-group">
+                                    <label for="PeaceMakerId">Court</label>
+                                    <input [formControl]="caseLegalForm.controls['Court']" class="form-control" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="PeaceMakerId">Prayer</label>
+                                    <input [formControl]="caseLegalForm.controls['Prayer']" class="form-control" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="PeaceMakerId">Name of legal representative</label>
+                                    <input [formControl]="caseLegalForm.controls['LegalRepresentative']" class="form-control" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="CenterId">Has the legal consent form been signed and submitted?</label>
+                                    <ng-select [options]="yesNoOptionsList"
+                                               placeholder="Select"
+                                               formControlName="LegalConsentFormLookupId"
+                                               [allowClear]="true">
+                                    </ng-select>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="CenterId">Has any legal action been taken by the client in this regard prior to approaching OPM for help?</label>
+                                    <ng-select [options]="yesNoOptionsList"
+                                               placeholder="Select"
+                                               formControlName="LegalActionLookupId"
+                                               [allowClear]="true">
+                                    </ng-select>
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="form-group">
-                            <label for="PeaceMakerId">Court</label>
-                            <input [formControl]="caseLegalForm.controls['Court']" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="PeaceMakerId">Prayer</label>
-                            <input [formControl]="caseLegalForm.controls['Prayer']" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="PeaceMakerId">Name of legal representative</label>
-                            <input [formControl]="caseLegalForm.controls['LegalRepresentative']" class="form-control" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="CenterId">Has the legal consent form been signed and submitted?</label>
-                            <ng-select [options]="yesNoOptionsList"
-                                       placeholder="Select"
-                                       formControlName="LegalConsentFormLookupId"
-                                       [allowClear]="true">
-                            </ng-select>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="CenterId">Has any legal action been taken by the client in this regard prior to approaching OPM for help?</label>
-                            <ng-select [options]="yesNoOptionsList"
-                                       placeholder="Select"
-                                       formControlName="LegalActionLookupId"
-                                       [allowClear]="true">
-                            </ng-select>
-                        </div>
-
                     </div>
 
                     <div class="col-md-4 d-flex flex-column">
-                        <div class="form-group">
-                            <label for="CenterId">Outcome</label>
-                            <ng-select [options]="outcomeLookupOptionList"
-                                       placeholder="Select"
-                                       formControlName="OutcomeLookupId"
-                                       [allowClear]="true">
-                            </ng-select>
-                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                Outcome
+                            </div>
+                            <div class="card-block">
+                                <div class="form-group">
+                                    <label for="CenterId">Outcome</label>
+                                    <ng-select [options]="outcomeLookupOptionList"
+                                               placeholder="Select"
+                                               formControlName="OutcomeLookupId"
+                                               [allowClear]="true">
+                                    </ng-select>
+                                </div>
 
-                        <div class="form-group">
-                            <label for="CenterId">List all documents that the client has submitted</label>
-                            <ng-select [options]="documentsLookupOptionList"
-                                       placeholder="Select"
-                                       formControlName="DocumentsLookupId"
-                                       [allowClear]="true">
-                            </ng-select>
-                        </div>
+                                <div class="form-group">
+                                    <label for="CenterId">List all documents that the client has submitted</label>
+                                    <ng-select [options]="documentsLookupOptionList"
+                                               placeholder="Select"
+                                               formControlName="DocumentsLookupId"
+                                               [allowClear]="true">
+                                    </ng-select>
+                                </div>
 
-                        <div class="form-group">
-                            <button class="btn btn-primary" (click)="onUpdateLegal()">Update</button>
+                                <div class="form-group">
+                                    <button class="btn btn-primary" (click)="onUpdateLegal()">Update</button>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
-
-
                 </div>
             </form>
         </tab>
@@ -1551,9 +1563,8 @@
             </div>
             <div class="modal-body">
                 <form [formGroup]="caseMentalForm" *ngIf="caseMentalForm">
-                    <div class="row">
-
-                        <div class="col-md-4 d-flex flex-column">
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-column">
                             <div class="card flex-fill">
                                 <div class="card-header">
                                     Mental Status
@@ -1624,7 +1635,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 d-flex flex-column">
+                        <div class="d-flex flex-column">
                             <div class="card flex-fill">
                                 <div class="card-header">
                                     Mental Status
@@ -1697,7 +1708,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 d-flex flex-column">
+                        <div class="d-flex flex-column">
                             <div class="card flex-fill">
                                 <div class="card-header">
                                     Mental Status
