Removed "Mental" from table header

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1023,25 +1023,25 @@
                     <table class="table" style="color:whitesmoke">
                         <thead class="thead-inverse">
                             <tr>
-                                <th>MentalDress</th>
-                                <th>MentalHygiene</th>
-                                <th>MentalBodyType</th>
-                                <th>MentalExpression</th>
-                                <th>MentalMotorActivity</th>
-                                <th>MentalVocabulary</th>
-                                <th>MentalImpulseControl</th>
-                                <th>MentalSpeech</th>
-                                <th>MentalBehaviour</th>
-                                <th>MentalContent</th>
-                                <th>MentalFlowOfThought</th>
-                                <th>MentalOrientation</th>
-                                <th>MentalEstimatedIntellect</th>
-                                <th>MentalAttention</th>
-                                <th>MentalInsight</th>
-                                <th>MentalJudgement</th>
-                                <th>MentalMemory</th>
-                                <th>MentalInformation</th>
-                                <th>MentalAbstraction</th>
+                                <th>Dress</th>
+                                <th>Hygiene</th>
+                                <th>BodyType</th>
+                                <th>Expression</th>
+                                <th>MotorActivity</th>
+                                <th>Vocabulary</th>
+                                <th>ImpulseControl</th>
+                                <th>Speech</th>
+                                <th>Behaviour</th>
+                                <th>Content</th>
+                                <th>FlowOfThought</th>
+                                <th>Orientation</th>
+                                <th>EstimatedIntellect</th>
+                                <th>Attention</th>
+                                <th>Insight</th>
+                                <th>Judgement</th>
+                                <th>Memory</th>
+                                <th>Information</th>
+                                <th>Abstraction</th>
                                 <th class="text-right"></th>
                             </tr>
                         </thead>
