--- a/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
@@ -19,7 +19,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']"><i class="icon-speedometer"></i><span> Dashboard</span></a>
                     <a class="nav-link" routerLinkActive="active" [routerLink]="['/cases/create']"><i class="icon-plus"></i><span>  New Case</span> </a>
-                    <a class="nav-link" routerLinkActive="active" [routerLink]="['/cases/list']"><i class="icon-notebook"></i><span>  All Cases </span><span class="badge badge-info">NEW</span></a>
+                    <a class="nav-link" routerLinkActive="active" [routerLink]="['/cases/list']"><i class="icon-notebook"></i><span>  All Cases </span></a>
                 </li>
             </ul>
         </nav>
