fix: toastr color change

--- a/Web/WhitePage.MyWeb.UI/src/scss/_custom.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/_custom.scss
@@ -164,6 +164,7 @@ input {
     margin-bottom: 15px;
     text-align: center;
 }
-.responsive-table{
-    width : 70%;
+.toast-success{
+    background-color: $brand-primary !important;
 }
+
